--- a/app/views/promotions/index.html.erb
+++ b/app/views/promotions/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Registrar uma promoção', new_promotion_path %>
+
 <% @promotions.each do |promotion| %>
     <h3> <%= link_to promotion.name, promotion %> </h3>
     <p> <%= promotion.description %> </p>
