Cadastrar promoção com todos os campos e WIP testes

--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -1,3 +1,11 @@
+<% if @promotion.errors.any? %>
+    <ul>
+        <% @promotion.errors.full_messages.each do |message| %>
+            <li> <%= message %> </li>
+        <% end %>
+    </ul>
+<% end %>
+
 <%= form_with model: @promotion, locals: true do |f| %>
     <%= f.label :name, 'Nome' %>
     <%= f.text_field :name %>
