WIP testes ver categorias de produto

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,4 @@
 <h2> Boas vindas ao sistema de gestão de promoções </h2>
 
 <%= link_to 'Promoções', promotions_path %>
+<%= link_to 'Categorias de produto', product_categories_path %>
