--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -7,17 +7,17 @@
 <% end %>
 
 <%= form_with model: @promotion, locals: true do |f| %>
-    <%= f.label :name, 'Nome' %>
+    <%= f.label :name %>
     <%= f.text_field :name %>
-    <%= f.label :description, 'Descrição' %>
+    <%= f.label :description %>
     <%= f.text_field :description %>
-    <%= f.label :code, 'Código' %>
+    <%= f.label :code %>
     <%= f.text_field :code %>
-    <%= f.label :discount_rate, 'Desconto' %>
+    <%= f.label :discount_rate %>
     <%= f.number_field :discount_rate %>
-    <%= f.label :coupon_quantity, 'Quantidade de cupons' %>
+    <%= f.label :coupon_quantity %>
     <%= f.text_field :coupon_quantity %>
-    <%= f.label :expiration_date, 'Data de término' %>
+    <%= f.label :expiration_date %>
     <%= f.date_field :expiration_date %>
     <%= f.submit 'Criar promoção' %>
 <% end %>
