--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Voltar', promotions_path %>
 
 <h1> <%= @promotion.name %> </h1>
-    <p> <%= @promotion.description %> </p>
+<p> <%= @promotion.description %> </p>
 <dl>
     <dt> Desconto em porcentagem </dt>
     <dd> <%= number_to_percentage @promotion.discount_rate, precision: 2, separator: ',' %> </p> </dd>
@@ -22,13 +22,13 @@
 
     <%= render @promotion.coupons %>
     
-    #<% @promotion.coupons.each do |coupon| %>
-        #<dl>
-            #<dt> Coupon.human_attribute_name(:code) </dt>
-            #<dd> <%= coupon.title  %> </dd>
-        #</dl>
-        #<% if coupon.active? %>
-            #<% link_to t('.inactivate_cupom'), inactivate_coupon_path(coupon), method: >post %>
-        #<% end %>
-    #<% end %>
+    <% @promotion.coupons.each do |coupon| %>
+        <dl>
+            <dt> Coupon.human_attribute_name(:code) </dt>
+            <dd> <%= coupon.title  %> </dd>
+        </dl>
+        <% if coupon.active? %>
+            <% link_to t('.inactivate_cupom'), inactivate_coupon_path(coupon), method: :post %>
+        <% end %>
+    <% end %>
 <% end %>
